# graphiti-ui

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  docker-compose.example.yml  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.scss
frontend/src/api/: client.ts
frontend/src/components/: ForceGraphVisualization.tsx  Layout.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: ApiKeysPage.tsx  DashboardPage.tsx  EntityTypesPage.tsx  EpisodesPage.tsx  LoginPage.tsx  QueryPage.tsx  SetupPage.tsx  VisualizationPage.tsx
src/: __init__.py  config.py  main.py
src/api/: __init__.py  api_keys_api.py  config_api.py  dashboard.py  docker_api.py  entity_types.py  episodes.py  graph_api.py  mcp_proxy.py  query.py
src/auth/: dependencies.py  jwt.py  router.py
src/models/: __init__.py  config.py
src/services/: api_key_service.py  config_service.py  credentials_service.py  docker_service.py  entity_type_service.py  falkordb_service.py  graphiti_client.py  graphiti_service.py  queue_service.py
